--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
                     <button>Click Here</button>
                 </div>
             </section>
+            <section class="mySkills">
+                <h1>My UX Skills</h1>
+                <div class="flexContainer">
+                    <div>
+                        <img src="ux-design-icon.png" alt="UX Design">
+                        <h3>UX Design</h3>
+                        <p>Detailing my approach to user experience design, focusing on user needs and iterative design.</p>
+                    </div>
+                    <div>
+                        <img src="user-research-icon.png" alt="User Research">
+                        <h3>User Research</h3>
+                        <p>Explaining how I gather and interpret user data to guide design decisions.</p>
+                    </div>
+                    <div>
+                        <img src="interaction-design-icon.png" alt="Interaction Design">
+                        <h3>Interaction Design</h3>
+                        <p>Describing my method for creating engaging interfaces with well-thought-out behaviors.</p>
+                    </div>
+                </div>
+            </section>
+            
+            <!-- My Work Section Constructed using CSS Grid -->
+            <section class="myWork">
+                <h1>My Work</h1>
+                <div class="workGrid">
+                    <div>
+                        <img src="project1-thumbnail.jpg" alt="Project 1">
+                    </div>
+                    <div>
+                        <h4>Project 1 Title</h4>
+                        <p>A brief description of Project 1.</p>
+                        <button>View Project</button>
+                    </div>
+                    <div>
+                        <img src="project2-thumbnail.jpg" alt="Project 2">
+                    </div>
+                    <div>
+                        <h4>Project 2 Title</h4>
+                        <p>A brief description of Project 2.</p>
+                        <button>View Project</button>
+                    </div>
+                </div>
+                <h3>View all projects</h3>
+            </section>
             <footer>
                 <ul>
                     <li class="inline-block">Email</li>
