--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="content">
                     <img src="Images/Portfolio Vector.png" >
                     
-                    <h1>Hello, Im Zak</h1>
+                    <h1>Hello, I'm Zak</h1>
                     <p>A passionate illustrator and visual designer from Atlanta, Georgia. </p>
                     <button>Click Here</button>
                 </div>
@@ -37,17 +37,17 @@
                 <h1>My UX Skills</h1>
                 <div class="flexContainer">
                     <div>
-                        <img src="ux-design-icon.png" alt="UX Design">
+                        <img src="Images/experience.png" >
                         <h3>UX Design</h3>
                         <p>Detailing my approach to user experience design, focusing on user needs and iterative design.</p>
                     </div>
                     <div>
-                        <img src="user-research-icon.png" alt="User Research">
+                        <img src="Images/Research.png" >
                         <h3>User Research</h3>
                         <p>Explaining how I gather and interpret user data to guide design decisions.</p>
                     </div>
                     <div>
-                        <img src="interaction-design-icon.png" alt="Interaction Design">
+                        <img src="Images/Interaction.png" >
                         <h3>Interaction Design</h3>
                         <p>Describing my method for creating engaging interfaces with well-thought-out behaviors.</p>
                     </div>
@@ -56,26 +56,23 @@
             
             <!-- My Work Section Constructed using CSS Grid -->
             <section class="myWork">
-                <h1>My Work</h1>
-                <div class="workGrid">
-                    <div>
-                        <img src="project1-thumbnail.jpg" alt="Project 1">
-                    </div>
-                    <div>
-                        <h4>Project 1 Title</h4>
-                        <p>A brief description of Project 1.</p>
-                        <button>View Project</button>
-                    </div>
-                    <div>
-                        <img src="project2-thumbnail.jpg" alt="Project 2">
-                    </div>
-                    <div>
-                        <h4>Project 2 Title</h4>
-                        <p>A brief description of Project 2.</p>
+                <h1>My Work : </h1>
+                <div class="project">
+                    <img src="Images/pep.png" alt="Project 1 Image">
+                    <div class="project-info">
+                        <h4>The Pepper Foundation</h4>
+                        <p>A brief description of Project 1. This project demonstrates my skills in...</p>
                         <button>View Project</button>
                     </div>
                 </div>
-                <h3>View all projects</h3>
+                <div class="project">
+                    <img src="Images/ene.png" alt="Project 2 Image">
+                    <div class="project-info">
+                        <h4>Department of Energy</h4>
+                        <p>A brief description of Project 2. In this project, I focused on...</p>
+                        <button>View Project</button>
+                    </div>
+                </div>
             </section>
             <footer>
                 <ul>
