--- a/index.html
+++ b/index.html
@@ -38,18 +38,20 @@
                 <div class="flexContainer">
                     <div>
                         <img src="Images/experience.png" >
-                        <h3>UX Design</h3>
-                        <p>Detailing my approach to user experience design, focusing on user needs and iterative design.</p>
+                        <h3>Ui Design</h3>
+                        <p> With a keen eye for detail and a passion for innovative design, I excel in creating interfaces 
+                            that are both visually stunning and intuitively easy to use.</p>
                     </div>
                     <div>
                         <img src="Images/Research.png" >
                         <h3>User Research</h3>
-                        <p>Explaining how I gather and interpret user data to guide design decisions.</p>
+                        <p>This skill ensures that every design decision is data-driven and tailored to the target audience, enhancing user satisfaction and engagement.</p>
                     </div>
                     <div>
                         <img src="Images/Interaction.png" >
                         <h3>Interaction Design</h3>
-                        <p>Describing my method for creating engaging interfaces with well-thought-out behaviors.</p>
+                        <p> This skills enable me to create engaging, efficient, 
+                            and meaningful digital experiences, focusing on the nuances of user behavior and feedback to refine and perfect user interactions.</p>
                     </div>
                 </div>
             </section>
