--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 </div>
             </section>
             
-            <!-- My Work Section Constructed using CSS Grid -->
             <section class="myWork">
                 <h1>My Work : </h1>
                 <div class="project">
                     <img src="Images/pep.png" alt="Project 1 Image">
                     <div class="project-info">
                         <h4>The Pepper Foundation</h4>
-                        <p>A brief description of Project 1. This project demonstrates my skills in...</p>
+                        <p> The Pepper Foundation is a Non-Profit Animal Rescue Organization that rescues primarily special needs 
+                            and senior animals from high-kill shelters in Los Angeles and surrounding areas.</p>
                         <button>View Project</button>
                     </div>
                 </div>
@@ -71,7 +71,8 @@
                     <img src="Images/ene.png" alt="Project 2 Image">
                     <div class="project-info">
                         <h4>Department of Energy</h4>
-                        <p>A brief description of Project 2. In this project, I focused on...</p>
+                        <p> The mission of the Energy Department is to ensure America's security and 
+                            prosperity by addressing its energy, environmental and nuclear challenges through transformative science and technology solutions.</p>
                         <button>View Project</button>
                     </div>
                 </div>
